--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tablebookingnextjs",
+  "name": "app-admin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,28 +7,73 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": " prisma generate"
+    "test": "jest",
+    "cypress": "cypress open",
+    "cypress:run": "cypress run",
+    "temp:issuer:serve": "npx http-server -a localhost -p 8080 -o temp-issuer.html",
+    "debug": "npm-run-all --parallel dev temp:issuer:serve"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.0",
-    "@next/font": "13.4.1",
-    "@prisma/client": "^4.8.1",
-    "@types/node": "20.1.1",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "@types/validator": "^13.7.17",
-    "next": "13.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.4",
-    "validator": "^13.9.0"
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^3.1.1",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.6",
+    "@mui/x-data-grid": "^5.17.22",
+    "@mui/x-date-pickers": "^6.3.0",
+    "axios": "^1.3.2",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
+    "jose": "^4.11.2",
+    "memory-cache": "^0.2.0",
+    "mochawesome-merge": "^4.3.0",
+    "next": "^13.2.0",
+    "node-mocks-http": "^1.12.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-papaparse": "^4.1.0",
+    "swr": "^2.0.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20",
-    "prisma": "^4.8.1",
-    "tailwindcss": "^3.2.4"
+    "@testing-library/cypress": "^9.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/file-saver": "^2.0.5",
+    "@types/memory-cache": "^0.2.2",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "adm-zip": "^0.5.10",
+    "cy-verify-downloads": "^0.1.14",
+    "cypress": "^12.8.1",
+    "cypress-mochawesome-reporter": "^3.3.0",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.41.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-next": "^13.2.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-cypress": "^2.13.3",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-testing-library": "^5.11.0",
+    "eslint-plugin-unicorn": "^47.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "nodemailer": "^6.9.4",
+    "npm-run-all": "^4.1.5",
+    "typescript": "5.0.4"
+  },
+  "resolutions": {
+    "**/semver": "^5.7.2",
+    "**/tough-cookie": "^4.1.3",
+    "**/word-wrap": "^1.2.4"
   }
 }
